--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ org-jetbrains-kotlinx = "1.9.0"
 tiles-tooling-preview = "1.4.1"
 constraintlayout = "2.2.0"
 appcompat = "1.7.0"
+wear = "1.3.0"
 
 [libraries]
 androidx-datastore = "androidx.datastore:datastore-preferences:1.1.2"
@@ -32,6 +33,7 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", vers
 desugar-jdk-libs = "com.android.tools:desugar_jdk_libs:2.1.4"
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-wear = { group = "androidx.wear", name = "wear", version.ref = "wear" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
